fix: Align logo to top-left as per design

--- a/styles.css
+++ b/styles.css
@@ -134,8 +134,9 @@ img {
     width: 75px;
     height: 50px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 2px 8px;
     text-decoration: none;
     flex-shrink: 0;
 }
@@ -814,8 +815,9 @@ img {
     width: 45px;
     height: 30px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 1px 5px;
 }
 
 .footer-branding {
